--- a/templates/ai.html
+++ b/templates/ai.html
@@ -11,6 +11,7 @@
 <body>
 
     <table class="styled-table">
+        <caption>: C3.ai, Inc. Stock Stats</caption>
         <thead>
             <tr>
                 <th>Header 1</th>
