--- a/templates/ai.html
+++ b/templates/ai.html
@@ -11,7 +11,7 @@
 <body>
 
     <table class="styled-table">
-        <caption>: C3.ai, Inc. Stock Stats</caption>
+        <caption>C3.ai, Inc. Stock Statistics</caption>
         <thead>
             <tr>
                 <th>Header 1</th>
