--- a/templates/ai.html
+++ b/templates/ai.html
@@ -14,7 +14,7 @@
         <caption>C3.ai, Inc. Stock Statistics</caption>
         <thead>
             <tr>
-                <th>Header 1</th>
+                <th>Stock Symbol</th>
                 <th>Header 2</th>
                 <th>Header 3</th>
             </tr>
