--- a/templates/test.html
+++ b/templates/test.html
@@ -1,30 +1,17 @@
-<!-- stock_info.html -->
-
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stock Information</title>
+    <title>Test Page</title>
 </head>
 
 <body>
     <h1>Stock Information</h1>
-    <ul>
-        <li><strong>Symbol:</strong> {{ info.get('symbol', '') }}</li>
-        <li><strong>Name:</strong> {{ info.get('longName', '') }}</li>
-        <li><strong>Industry:</strong> {{ info.get('industry', '') }}</li>
-        <!-- Add more information as needed -->
-    </ul>
-    <ul>
-        {% for key, value in info.items() %}
-        <li>{{ key }}: {{ value }}</li>
-        {% endfor %}
-    </ul>
-
-     
+    <p>Previous Close: {{ info.previousClose }}</p>
+    <p>Open: {{ info.open }}</p>
+    <p>Day Low: {{ info.dayLow }}</p>
 </body>
 
 </html>
-
