--- a/templates/test.html
+++ b/templates/test.html
@@ -9,8 +9,10 @@
 
 <body>
     <h1>Stock Information</h1>
+    <p>Symbol: {{ info.symbol}}</p>
     <p>Previous Close: {{ info.previousClose }}</p>
     <p>Open: {{ info.open }}</p>
+    <p>Day Low: {{ info.dayLow }}</p>
     <p>Day Low: {{ info.dayLow }}</p>
 </body>
 
