--- a/templates/test.html
+++ b/templates/test.html
@@ -12,6 +12,8 @@
     <p>Symbol: {{ info.symbol}}</p>
     <p>Previous Close: {{ info.previousClose }}</p>
     <p>Open: {{ info.open }}</p>
+    <p>Open: {{ info.dayLow }}</p>
+    <p>Open: {{ info.fullTimeEmployees }}</p>
     </body>
 
 </html>
