--- a/templates/test.html
+++ b/templates/test.html
@@ -15,6 +15,8 @@
     <p>Days' Low: {{ info.dayLow }}</p>
     <p>Full Time Employees: {{ info.fullTimeEmployees }}</p>
     <p>Website: <a href= >{{ info.website }}.com</a></p>
+    <p>Website: <a href="{{ info.website }}.com">{{ info.website }}.com</a></p>
+
     </body>
 
 </html>
