--- a/templates/test.html
+++ b/templates/test.html
@@ -14,7 +14,7 @@
     <p>Open: {{ info.open }}</p>
     <p>Days' Low: {{ info.dayLow }}</p>
     <p>Full Time Employees: {{ info.fullTimeEmployees }}</p>
-    <p>Website: <a href="{{ info.website }}.com">{{ info.website }}.com</a></p>
+    <p>Website: <a href="{{ info.website }}">{{ info.website }}</a></p>
 
     </body>
 
