--- a/templates/test.html
+++ b/templates/test.html
@@ -10,6 +10,7 @@
 <body>
     <h1>{{ info.symbol}}</h1>
     <p>Symbol: {{ info.symbol}}</p>
+    <p>Current Price: {{ info.currentPrice }}</p>
     <p>Previous Close: {{ info.previousClose }}</p>
     <p>Open: {{ info.open }}</p>
     <p>Days' Low: {{ info.dayLow }}</p>
