--- a/templates/test.html
+++ b/templates/test.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1>{{ info.Symbol}}</h1>
+    <!-- <h1>{{ info.Symbol}}</h1> -->
     <p>Symbol: {{ info.symbol}}</p>
     <p>Current Price: {{ info.currentPrice }}</p>
     <p>Previous Close: {{ info.previousClose }}</p>
