--- a/templates/test.html
+++ b/templates/test.html
@@ -8,15 +8,15 @@
 </head>
 
 <body>
-    <!-- <h1>{{ info.Symbol}}</h1> -->
+    <h1>{{ info.underlyingSymbol}}</h1>
     <p>Symbol: {{ info.symbol}}</p>
     <p>Current Price: {{ info.currentPrice }}</p>
     <p>Previous Close: {{ info.previousClose }}</p>
     <p>Open: {{ info.open }}</p>
     <p>Days' Low: {{ info.dayLow }}</p>
     <p>Full Time Employees: {{ info.fullTimeEmployees }}</p>
-    <p>Website: <a href="{{ info.website }}">{{ info.website }}</a></p>
-
+    <p>Fifty Day Moving Average: {{ info.fiftyDayAverage }}</a></p>
+    <p>Two Hundred Day Moving Average: {{ info.twoHundredDayAverage }}</a></p>
     </body>
 
 </html>
