--- a/templates/test.html
+++ b/templates/test.html
@@ -16,6 +16,7 @@
     <p>Days' Low: {{ info.dayLow }}</p>
     <p>Full Time Employees: {{ info.fullTimeEmployees }}</p>
     <p>Fifty Day Moving Average: {{ info.fiftyDayAverage }}</a></p>
+    <p>Relative to 50 Day Moving Average: {{ info.relto50 }}</a></p>
     <p>Two Hundred Day Moving Average: {{ info.twoHundredDayAverage }}</a></p>
     </body>
 </html>
