--- a/templates/test.html
+++ b/templates/test.html
@@ -14,9 +14,11 @@
     <p>Previous Close: {{ info.previousClose }}</p>
     <p>Open: {{ info.open }}</p>
     <p>Days' Low: {{ info.dayLow }}</p>
+    <p>Sector: {{ info.sector }}</p>
+    <p>Industry: {{ info.industry }}</p>
     <p>Full Time Employees: {{ info.fullTimeEmployees }}</p>
     <p>Fifty Day Moving Average: {{ info.fiftyDayAverage }}</a></p>
     <p>Relative to 50 Day Moving Average: {{ info.relto50 }}</a></p>
     <p>Two Hundred Day Moving Average: {{ info.twoHundredDayAverage }}</a></p>
-    </body>
+</body>
 </html>
