--- a/templates/test.html
+++ b/templates/test.html
@@ -15,10 +15,15 @@
     <p>Open: {{ info.open }}</p>
     <p>Days' Low: {{ info.dayLow }}</p>
     <p>Sector: {{ info.sector }}</p>
-    <p>Industry: {{ info.industry }}</p>
+    <p>Industry: {{ info.currentPrice }}</p>
     <p>Full Time Employees: {{ info.fullTimeEmployees }}</p>
     <p>Fifty Day Moving Average: {{ info.fiftyDayAverage }}</a></p>
     <p>Relative to 50 Day Moving Average: {{ info.relto50 }}</a></p>
     <p>Two Hundred Day Moving Average: {{ info.twoHundredDayAverage }}</a></p>
+    <table>
+        <th>{{ info.currentPrice }}</th>
+        <tr><td>{{ info.currentPrice }}</td>
+        </tr>
+    </table>
 </body>
 </html>
