--- a/templates/test.html
+++ b/templates/test.html
@@ -21,8 +21,21 @@
     <p>Relative to 50 Day Moving Average: {{ info.relto50 }}</a></p>
     <p>Two Hundred Day Moving Average: {{ info.twoHundredDayAverage }}</a></p>
     <table>
-        <th>{{ info.currentPrice }}</th>
-        <tr><td>{{ info.currentPrice }}</td>
+        <th>Q2 FY24</th>
+        <tr>
+            <td>Revenue</td>
+            <td>Gross profit GAAP</td>
+            <td>Gross profit non-GAAP</td>
+            <td>Gross margin GAAP</td>
+            <td>Gross margin non-GAAP</td>
+            <td>Operating loss GAAP</td>
+            <td>Operating loss non-GAAP</td>
+            <td>Operating margin GAAP</td>
+            <td>Operating margin non-GAAP</td>
+            <td>Net loss per share GAAP</td>
+            <td>Net loss per share non-GAAP</td>
+            <td>Weighted-average shares used in computing net loss per share attributable to common stockholders, basic and diluted</td>
+
         </tr>
     </table>
 </body>
