--- a/templates/test.html
+++ b/templates/test.html
@@ -15,28 +15,25 @@
     <p>Open: {{ info.open }}</p>
     <p>Days' Low: {{ info.dayLow }}</p>
     <p>Sector: {{ info.sector }}</p>
-    <p>Industry: {{ info.currentPrice }}</p>
+    <p>Industry: {{ info.industry }}</p>
     <p>Full Time Employees: {{ info.fullTimeEmployees }}</p>
     <p>Fifty Day Moving Average: {{ info.fiftyDayAverage }}</a></p>
     <p>Relative to 50 Day Moving Average: {{ info.relto50 }}</a></p>
     <p>Two Hundred Day Moving Average: {{ info.twoHundredDayAverage }}</a></p>
     <table>
-        <th>Q2 FY24</th>
-        <tr>
-            <td>Revenue</td>
-            <td>Gross profit GAAP</td>
-            <td>Gross profit non-GAAP</td>
-            <td>Gross margin GAAP</td>
-            <td>Gross margin non-GAAP</td>
-            <td>Operating loss GAAP</td>
-            <td>Operating loss non-GAAP</td>
-            <td>Operating margin GAAP</td>
-            <td>Operating margin non-GAAP</td>
-            <td>Net loss per share GAAP</td>
-            <td>Net loss per share non-GAAP</td>
-            <td>Weighted-average shares used in computing net loss per share attributable to common stockholders, basic and diluted</td>
-
-        </tr>
-    </table>
+        <th>Q2 FY24</th>        
+        <tr><td>Revenue</td></tr>
+        <tr><td>Gross profit GAAP</td></tr>
+        <tr><td>Gross profit non-GAAP</td></tr>
+        <tr><td>Gross margin GAAP</td></tr>
+        <tr><td>Gross margin non-GAAP</td></tr>
+        <tr><td>Operating loss GAAP</td></tr>
+        <tr><td>Operating loss non-GAAP</td></tr>
+        <tr><td>Operating margin GAAP</td></tr>
+        <tr><td>Operating margin non-GAAP</td></tr>
+        <tr><td>Net loss per share GAAP</td></tr>
+        <tr><td>Net loss per share non-GAAP</td></tr>
+        <tr><td>Weighted-average shares used in computing net loss per share attributable to common stockholders, basic and diluted</td></tr>
+</table>
 </body>
 </html>
