--- a/templates/styles.css
+++ b/templates/styles.css
@@ -5,7 +5,7 @@
     border-collapse: collapse;
     margin: 25px 0;
     font-size: 18px;
-    text-align: left;
+    text-align: right;
 }
 
 .styled-table th,
