--- a/templates/test.html
+++ b/templates/test.html
@@ -17,9 +17,9 @@
     <p>Sector: {{ info.sector }}</p>
     <p>Industry: {{ info.industry }}</p>
     <p>Full Time Employees: {{ info.fullTimeEmployees }}</p>
-    <p>Fifty Day Moving Average: {{ info.fiftyDayAverage }}</a></p>
+    <p>50 Day Moving Average: {{ info.fiftyDayAverage }}</a></p>
     <p>Relative to 50 Day Moving Average: {{ info.relto50 }}</a></p>
-    <p>Two Hundred Day Moving Average: {{ info.twoHundredDayAverage }}</a></p>
+    <p>200 Day Moving Average: {{ info.twoHundredDayAverage }}</a></p>
     <table>
         <th>Q2 FY24</th><th>Q1 FY24</th><th>Q4 FY23</th><th>Q3 FY23</th><th>Q2 FY23</th><th>Q1 FY23</th>
         <tr><td>Revenue</td></tr>
