--- a/templates/test.html
+++ b/templates/test.html
@@ -21,7 +21,7 @@
     <p>50 Day Moving Average: {{ info.fiftyDayAverage }}</a></p>
     <p>Relative to 50 Day Moving Average: {{ info.relto50 }}</a></p>
     <p>200 Day Moving Average: {{ info.twoHundredDayAverage }}</a></p>
-    <table>
+    <table class="styled-table">
         <th>Q2 FY24</th><th>Q1 FY24</th><th>Q4 FY23</th><th>Q3 FY23</th><th>Q2 FY23</th><th>Q1 FY23</th>
         <tr><td>Revenue</td></tr>
         <tr><td>Gross profit GAAP</td></tr>
