--- a/templates/test.html
+++ b/templates/test.html
@@ -10,7 +10,9 @@
 
 <body>
     <h1>{{ info.underlyingSymbol }}</h1>
+    <p>Name: {{ info.longName }}</p>
     <p>Symbol: {{ info.symbol }}</p>
+    <p>Business Summary: {{ info.longBusinessSummary }}</p>
     <p>Current Price: {{ info.currentPrice }}</p>
     <p>Previous Close: {{ info.previousClose }}</p>
     <p>Open: {{ info.open }}</p>
@@ -21,6 +23,7 @@
     <p>50 Day Moving Average: {{ info.fiftyDayAverage }}</a></p>
     <p>Relative to 50 Day Moving Average: {{ info.relto50 }}</a></p>
     <p>200 Day Moving Average: {{ info.twoHundredDayAverage }}</a></p>
+
     <table class="styled-table">
         <th>Q2 FY24</th><th>Q1 FY24</th><th>Q4 FY23</th><th>Q3 FY23</th><th>Q2 FY23</th><th>Q1 FY23</th>
         <tr><td>Revenue</td></tr>
