--- a/templates/test.html
+++ b/templates/test.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Test Page</title>
+    <link href="{{ url_for('static', filename='styles.css')}}" rel="stylesheet" type="text/css">    <title>Test Page</title>
 </head>
 
 <body>
