--- a/templates/test.html
+++ b/templates/test.html
@@ -36,7 +36,10 @@
         <tr><td>Operating margin non-GAAP</td></tr>
         <tr><td>Net loss per share GAAP</td></tr>
         <tr><td>Net loss per share non-GAAP</td></tr>
-        <tr><td>Weighted-average shares used in computing net loss per share attributable to common stockholders, basic and diluted</td></tr>
+        <tr><td>Weighted-average shares used in<br>
+            computing net loss per share <br>attributable
+             to common stockholders,<br> basic and diluted
+        </td></tr>
 </table>
 </body>
 </html>
