--- a/templates/test.html
+++ b/templates/test.html
@@ -11,7 +11,7 @@
     <h1>{{ info.underlyingSymbol }}</h1>
     <p>Name: {{ info.longName }}</p>
     <p>Symbol: {{ info.symbol }}</p>
-    <p>Business Summary: {{ info.longBusinessSummary }}</p>
+    <p>Business Summary:<br>{{ info.longBusinessSummary }}</p>
     <p>Current Price: {{ info.currentPrice }}</p>
     <p>Previous Close: {{ info.previousClose }}</p>
     <p>Open: {{ info.open }}</p>
