--- a/templates/test.html
+++ b/templates/test.html
@@ -13,7 +13,7 @@
     <p>Symbol: {{ info.symbol }}</p>
     <p>Sector: {{ info.sector }}</p>
     <p>Industry: {{ info.industry }}</p>
-    <p>Business Summary:<br>{{ info.longBusinessSummary }}</p>
+    <!-- <p>Business Summary:<br>{{ info.longBusinessSummary }}</p> -->
     <p>Current Price: {{ info.currentPrice }}</p>
     <p>Previous Close: {{ info.previousClose }}</p>
     <p>Open: {{ info.open }}</p>
