--- a/templates/show_data.html
+++ b/templates/show_data.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Data from Database</title>
+    <link rel="stylesheet" type="text/css" href="static/styles.css">
 </head>
 
 <body>
-    <h1>Data from Database - {{ table_name }}</h1>
+    <h1>C3.ai, Inc. {{ table_name }}</h1>
     <table border="1">
         <thead>
             <tr>
@@ -28,5 +29,4 @@
         </tbody>
     </table>
 </body>
-
 </html>
