--- a/static/styles.css
+++ b/static/styles.css
@@ -11,13 +11,13 @@
 .styled-table th,
 .styled-table td {
     padding: 12px 15px;
-    border-bottom: 1px solid #ddd;
+    border-bottom: 1px solid #820909;
     text-align: left;
     white-space: normal;
     /* or white-space: wrap; */
 }
 
 .styled-table th {
-    background-color: #f2f2f2;
+    background-color: #1b962b;
     text-align: left;
 }
