--- a/templates/show_data.html
+++ b/templates/show_data.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Data from Database</title>
-    <link rel="stylesheet" type="text/css" href="C:\Users\aroed\Downloads\mypythonapp\static\styles.css">
+    <link rel="stylesheet" type="text/css" href="../static/styles.css">
 
 </head>
 
