--- a/templates/test.html
+++ b/templates/test.html
@@ -4,8 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="{{ url_for('static', filename='styles.css')}}" rel="stylesheet" type="text/css">    <title>Test Page</title>
+    <!-- Remove the line below if you don't have a local styles.css file -->
+    <!-- <link href="{{ url_for('static', filename='styles.css')}}" rel="stylesheet" type="text/css"> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <title>Test Page</title>
 </head>
+
 
 <body>
     <h1>{{ info.underlyingSymbol }}</h1>
