--- a/templates/test.html
+++ b/templates/test.html
@@ -18,7 +18,8 @@
     <p>Symbol: {{ info.symbol }}</p>
     <p>Sector: {{ info.sector }}</p>
     <p>Industry: {{ info.industry }}</p>
-    <!-- <p>Business Summary:<br>{{ info.longBusinessSummary }}</p> -->
+    <p>Business Summary:<br>{{ info.longBusinessSummary }}</p>
+    <p>Business Summary Andy</p>
     <p>Current Price: {{ info.currentPrice }}</p>
     <p>Previous Close: {{ info.previousClose }}</p>
     <p>Open: {{ info.open }}</p>
