--- a/templates/test.html
+++ b/templates/test.html
@@ -19,10 +19,7 @@
     <p>Sector: {{ info.sector }}</p>
     <p>Industry: {{ info.industry }}</p>
     <p>Business Summary:<br>{{ info.longBusinessSummary }}</p>
-    <p>Business Summary and Investment Thesis.  Figs, Inc. is a direct-to-consumer apparel company that sells medical scrubs and healthcare apparel to healthcare professionals worldwide.  The healthcare apparel market has traditionally been an unbranded and fragemented market. The healthcare sector is the largest and fastest growing job segment in the United States, according to the Bureau of Labor Statistics. The growth rate for healthcare professionals in the US. is expected to grow at a 15% CAGR from 2019 to 2029.  A study commissioned by Figs estimated the total addressabel market of the worliwide healthcare apparel indistry to be $79.0 billion globally.
-
-    Figs went public on 2021-05-27 with a closing price of $30.02.  The stock underperformance was due to a variety of factors including, but not limited to, excessive valuation, slowing growth rates, cash burn, and covid related operating challenges.  The stock is interesting for a variety or reasons due t0 the valuation reset, improved operating metrics, strategy change and market opportunity.  Figs pionered a new market and it sure looks like they are on to something.
-    </p>
+    Figs went public on 2021-05-27 with a closing price of $30.02.  The stock's underperformance the past two years has been due to a variety of factors including, but not limited to, excessive valuation when going public, slowing growth rates, cash burn, and covid related operating challenges.  The stock is interesting for a variety of reasons due to the valuation reset, improved operating metrics, strategy change and market opportunity.  Figs is creating a brand and shaking up the uniform market for healthcare professionals. Cintas, Corp., the uniform company, has a market cap of 61 billion and Lululemon's market cap has surpassed Target Corp's as of today, so if this works, it could work for a while.</p>
     <p>Current Price: {{ info.currentPrice }}</p>
     <p>Previous Close: {{ info.previousClose }}</p>
     <p>Open: {{ info.open }}</p>
