--- a/templates/test.html
+++ b/templates/test.html
@@ -28,6 +28,7 @@
     <p>50 Day Moving Average: {{ info.fiftyDayAverage }}</a></p>
     <p>Relative to 50 Day Moving Average: {{ info.relto50 }}</a></p>
     <p>200 Day Moving Average: {{ info.twoHundredDayAverage }}</a></p>
+    <p>200 Day Moving Average: {{ info.twoHundredDayAverage }}</a></p>
 
     <table class="styled-table">
         <th>Q1 FY24</th><th>Q4 FY23</th><th>Q3 FY23</th><th>Q2 FY23</th><th>Q1 FY23</th>
