--- a/templates/test.html
+++ b/templates/test.html
@@ -19,7 +19,7 @@
     <p>Sector: {{ info.sector }}</p>
     <p>Industry: {{ info.industry }}</p>
     <p>Business Summary:<br>{{ info.longBusinessSummary }}</p>
-    Figs went public on 2021-05-27 with a closing price of $30.02.  The stock's underperformance the past two years has been due to a variety of factors including, but not limited to, excessive valuation when going public, slowing growth rates, cash burn, and covid related operating challenges.  The stock is interesting for a variety of reasons due to the valuation reset, improved operating metrics, strategy change and market opportunity.  Figs is creating a brand and shaking up the uniform market for healthcare professionals. Cintas, Corp., the uniform company, has a market cap of 61 billion and Lululemon's market cap has surpassed Target Corp's as of today, so if this works, it could work for a while.</p>
+    Figs went public on 2021-05-27 with a closing price of $30.02.  The stock's underperformance since the IPO has been due to a variety of factors including, but not limited to, excessive valuation when going public, slowing growth rates, cash burn, and covid related operating challenges.  The stock is interesting for a variety of reasons due to the valuation reset, improved operating metrics, strategy change and market opportunity.  Figs is creating a brand and shaking up the uniform market for healthcare professionals. Cintas, Corp., the uniform company, has a market cap of 61 billion and Lululemon's market cap has surpassed Target Corp's as of today, so if this works, it could work for a while.</p>
     <p>Current Price: {{ info.currentPrice }}</p>
     <p>Previous Close: {{ info.previousClose }}</p>
     <p>Open: {{ info.open }}</p>
