--- a/templates/test.html
+++ b/templates/test.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +11,8 @@
 </head>
 
 
-<body>
+<body class="p-3"> <!-- Add padding to the body -->
+    <div class="container"> <!-- Wrap your content in a container to add standard margins -->
     <h1>{{ info.underlyingSymbol }}</h1>
     <p>Name: {{ info.longName }}</p>
     <p>Symbol: {{ info.symbol }}</p>
@@ -47,6 +47,7 @@
             computing net loss per share <br>attributable
              to common stockholders,<br> basic and diluted
         </td></tr>
-</table>
+    </table>
+    </div>
 </body>
 </html>
