--- a/templates/test.html
+++ b/templates/test.html
@@ -7,9 +7,9 @@
     <!-- <link href="{{ url_for('static', filename='styles.css')}}" rel="stylesheet" type="text/css"> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <title>Test Page</title>
+    <title>Andy's Blog</head>/title>
 </head>
-
+<h2>Andy's Blog</h2>
 
 <body class="p-3"> <!-- Add padding to the body -->
     <div class="container"> <!-- Wrap your content in a container to add standard margins -->
