--- a/templates/test.html
+++ b/templates/test.html
@@ -9,9 +9,10 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Andy's Blog</title>
 </head>
-<h2>Andy's Blog</h2>
+
 
 <body class="p-3"> <!-- Add padding to the body -->
+    <p>Andy's Stock Blog</p>>
     <div class="container"> <!-- Wrap your content in a container to add standard margins -->
     <h1>{{ info.underlyingSymbol }}</h1>
     <p>Name: {{ info.longName }}</p>
