--- a/templates/test.html
+++ b/templates/test.html
@@ -11,9 +11,9 @@
 </head>
 
 
-<body class="p-3"> <!-- Add padding to the body -->
-    <p>Andy's Stock Blog</p>>
+<body class="p-3"> <!-- Add padding to the body -->    
     <div class="container"> <!-- Wrap your content in a container to add standard margins -->
+    <p>Andy's Stock Blog</p>
     <h1>{{ info.underlyingSymbol }}</h1>
     <p>Name: {{ info.longName }}</p>
     <p>Symbol: {{ info.symbol }}</p>
