--- a/templates/test.html
+++ b/templates/test.html
@@ -13,7 +13,7 @@
 
 <body class="p-3"> <!-- Add padding to the body -->    
     <div class="container"> <!-- Wrap your content in a container to add standard margins -->
-    <p>Andy's Stock Blog</p>
+    <p>Andy's Stock BlogGIN</p>
     <h1>{{ info.underlyingSymbol }}</h1>
     <p>Name: {{ info.longName }}</p>
     <p>Symbol: {{ info.symbol }}</p>
